--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
 
-*       @youngjoon-lee @gyuguen @H4NLee @inchori @audtlr24 @tjyoon0324
+*       @youngjoon-lee @gyuguen @inchori @audtlr24 @tjyoon0324
